--- a/Expedia/pom.xml
+++ b/Expedia/pom.xml
@@ -17,5 +17,11 @@
             <artifactId>generic</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>com.peoplentech</groupId>
+            <artifactId>Generic</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 </project>
