--- a/pom.xml
+++ b/pom.xml
@@ -11,10 +11,9 @@
     <modules>
         <module>Generic</module>
         <module>Expedia</module>
-        <module>Spirit</module>
         <module>Bestbuy</module>
         <module>CitiBank</module>
-        <module>CitiBank</module>
+        <module>Ebay</module>
     </modules>
     <dependencyManagement>
 
