--- a/Ebay/pom.xml
+++ b/Ebay/pom.xml
@@ -14,7 +14,7 @@
     <dependencies>
         <dependency>
             <groupId>com.peoplentech</groupId>
-            <artifactId>generic</artifactId>
+            <artifactId>Generic</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
     </dependencies>
@@ -36,7 +36,7 @@
                 <version>3.0.0-M3</version>
                 <configuration>
                     <suiteXmlFiles>
-                        <suiteXmlFiles>src/test/resources/ChaseRunner.xml</suiteXmlFiles>
+                        <suiteXmlFiles>src/test/resources/EbayRunner.xml</suiteXmlFiles>
                     </suiteXmlFiles>
                 </configuration>
             </plugin>
