--- a/pom.xml
+++ b/pom.xml
@@ -10,10 +10,10 @@
     <version>1.0-SNAPSHOT</version>
     <modules>
         <module>Generic</module>
-        <module>Expedia</module>
         <module>Bestbuy</module>
         <module>CitiBank</module>
         <module>Ebay</module>
+        <module>Target</module>
     </modules>
     <dependencyManagement>
 
